--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,14 +1,49 @@
 ---
-- name: debug groups
+- name: Debug groups
   debug:
     msg: "{{ groups['proxy'] }}"
   tags:
     - debug
 
-- debug:
+- name: Debug ansible_distribution_release
+  debug:
     var: ansible_distribution_release
 
-- name: Install and configure 3proxy
-  block:
-    - name: Install 3proxy
-      include: install.yml
+- name: Install 3proxy deb from github.com
+  apt:
+    deb: "https://github.com/3proxy/3proxy/\
+          releases/download/{{ proxy_version }}/\
+          3proxy-{{ proxy_version }}.{{ ansible_architecture }}.deb"
+  tags:
+    - install
+
+- name: Create config
+  template:
+    src: 3proxy.cfg.j2
+    dest: "{{ proxy_config }}"
+    mode: 0644
+  notify: Restart 3proxy
+
+- name: Create passwd
+  copy:
+    src: files/conf/passwd
+    dest: "{{ proxy_config_path }}/passwd"
+    mode: 0640
+  notify: Restart 3proxy
+
+- name: Enable 3proxy service
+  systemd:
+    name: 3proxy
+    enabled: true
+    masked: false
+    state: restarted
+
+# - name: Ensure 3proxy user
+#   user:
+#     name: "{{ 3proxy_user }}"
+#     group: "{{ 3proxy_group }}"
+#     system: yes
+#     shell: /usr/sbin/nologin
+#     createhome: no
+#   tags:
+#     - install
