--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,58 +9,15 @@ on:
     workflows:
       - "code linter"
     branches:
-      - main
+      - master
     types:
       - completed
 
 defaults:
   run:
-    working-directory: 'ansible-3proxy'
+    working-directory: 'ansible-ipset'
 
 jobs:
-
-  arch:
-    name: "${{ matrix.image }} / ansible: ${{ matrix.ansible-version }}"
-    runs-on: ubuntu-20.04
-    if: ${{ github.event_name == 'schedule' || github.event.workflow_run.conclusion == 'success' }}
-    strategy:
-      fail-fast: false
-      matrix:
-        image:
-          - archlinux:latest
-          - artixlinux:latest
-        ansible-version:
-          - '5.1'
-          - '6.1'
-        scenario:
-          - default
-
-    steps:
-      - name: check out the codebase.
-        uses: actions/checkout@v2
-        with:
-          path: 'ansible-knot'
-
-      - name: set up python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-
-      - name: install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r test-requirements.txt
-
-      - name: test with tox
-        run: |
-          tox -e ansible_$(printf "${{ matrix.ansible-version }}") \
-            -- molecule test --scenario-name default
-        env:
-          PY_COLORS: '1'
-          ANSIBLE_FORCE_COLOR: '1'
-          ANSIBLE_LOAD_CALLBACK_PLUGINS: '1'
-          DISTRIBUTION: ${{ matrix.image }}
-
   deb:
     name: "${{ matrix.image }} / ansible: ${{ matrix.ansible-version }}"
     runs-on: ubuntu-20.04
@@ -68,6 +25,7 @@ jobs:
       fail-fast: false
       matrix:
         image:
+          - debian:10
           - debian:11
           - ubuntu:20.04
           - ubuntu:22.04
@@ -81,7 +39,7 @@ jobs:
       - name: check out the codebase.
         uses: actions/checkout@v2
         with:
-          path: 'ansible-knot'
+          path: 'ipset'
 
       - name: set up python
         uses: actions/setup-python@v2
@@ -90,7 +48,6 @@ jobs:
 
       - name: install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r test-requirements.txt
 
       - name: test with tox
@@ -103,9 +60,8 @@ jobs:
           DISTRIBUTION: ${{ matrix.image }}
 
   publish:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
     needs:
-      - arch
       - deb
     runs-on: ubuntu-20.04
     steps:
@@ -113,4 +69,4 @@ jobs:
         uses: robertdebock/galaxy-action@1.2.1
         with:
           galaxy_api_key: ${{ secrets.galaxy_api_key }}
-          git_branch: main
+          git_branch: master  # default
