--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,10 +1,11 @@
 ---
 galaxy_info:
-  role_name: 3proxy
+  role_name: proxy
   namespace: sv0
   author: slavik@svyrydiuk.eu
   description: Install and configure 3proxy
-  min_ansible_version: 2.9
+  min_ansible_version: '2.9'
+  license: GPL
   platforms:
     - name: Debian
       versions:
